--- a/public/global.css
+++ b/public/global.css
@@ -1,29 +1,11 @@
 body {
-  color: #333;
+  color: #444;
   font-family: "EB Garamond", serif;
   font-size: 110%;
-  max-width: 350px;
-  margin: auto;
-  padding: 1em;
-  padding-bottom: 2em;
-}
-
-@media (min-width: 768px) {
-  body {
-    max-width: 700px;
-  }
-}
-
-@media (min-width: 1280px) {
-  body {
-    max-width: 1050px;
-  }
-}
-
-@media (min-width: 1440px) {
-  body {
-    max-width: 1400px;
-  }
+  margin: 0;
+  padding: 0;
+  background-color: #dbe5e3;
+  background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2392aca9' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 a {
@@ -51,7 +33,7 @@ textarea {
   font-size: inherit;
   -webkit-padding: 0.4em 0;
   padding: 0.4em;
-  margin: 0 0 0.5em 0;
+  margin: 0;
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -62,7 +44,7 @@ input:disabled {
 }
 
 button {
-  color: #333;
+  color: #444;
   background-color: #f4f4f4;
   outline: none;
 }
