--- a/public/global.css
+++ b/public/global.css
@@ -1,7 +1,6 @@
 body {
   color: #404040;
-  font-family: "EB Garamond", serif;
-  font-size: 110%;
+  font-family: Georgia, "Roboto Slab", serif;
   margin: 0;
   padding: 0;
   background-color: #dbe5df;
