--- a/public/global.css
+++ b/public/global.css
@@ -1,6 +1,6 @@
 body {
   color: #404040;
-  font-family: Georgia, "Roboto Slab", serif;
+  font-family: Georgia, 'Roboto Slab', serif;
   margin: 0;
   padding: 0;
   background-color: #dbe5df;
